--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "mkdirp": "^0.3.5",
     "strftime": "~0.6.2",
     "sequelize": "^3.6.0",
-    "nconf": "^0.7.2" 
+    "nconf": "^0.7.2",
+    "sqlite3": "^3.0.0" 
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
