--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "strftime": "~0.6.2",
     "sequelize": "^3.6.0",
     "nconf": "^0.7.2",
-    "sqlite3": "^3.0.0" 
+    "sqlite3": "^3.0.0",
+		"sprintf-js": "^1.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
