finished initDb function # Please enter the commit message for your changes. Lines starting # with '#' will be kept; you may remove them yourself if you want to. # An empty message aborts the commit. # On branch aNewDawn # Your branch is up-to-date with 'origin/aNewDawn'. # # Changes to be committed: #	modified:   bin/model.js #	modified:   package.json #

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "sequelize": "^3.6.0",
     "nconf": "^0.7.2",
     "sqlite3": "^3.0.0",
-		"sprintf-js": "^1.0.0"
+		"sprintf-js": "^1.0.0",
+    "async": "^1.4.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
